Change how prompts are added to the assignment and fix a bug in the user selection
